--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Kilometers and Photographs</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" > 
-  <link href="C:\Users\ljcan_000\Desktop\Website Project\style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 
 
