--- a/Kilometers and Photographs.html
+++ b/Kilometers and Photographs.html
@@ -3,7 +3,7 @@
 	<head>
   		<title>Kilometers and Photographs</title>
   		<meta name="viewport" content="width=device-width,initial-scale=1" > 
-  		<link href="C:\Users\ljamc\OneDrive\Desktop\Website Project\style.css" rel="stylesheet">
+  		<link href="style.css" rel="stylesheet" type="text/css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400;500;600;700&family=Kanit:ital,wght@0,200;0,700;1,400&family=Roboto:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&display=swap" rel="stylesheet">
