--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				
 				<div class="slideshow-wrapper">
 					<div class="slide">
-						<img class="slide-img" src="C:/Users/ljamc/OneDrive/Desktop/Website Project/photos/Mt. Cook-Queenstown/glacier.jpg">
+						<img class="slide-img" src="photos/Mt. Cook-Queenstown/glacier.jpg">
 
 					</div>
 					<div class="slide">
@@ -114,9 +114,6 @@
 	</section>
   </div>
 
-  	<section>
-		<h2>Hello</h2>
-	</section>
   	<section id="aboutme">
 
 		<div class="intro">
@@ -128,14 +125,10 @@
  		</div>
 
  		<div class="LetsGo">
-			 <img src="C:\Users\ljamc\OneDrive\Desktop\Website Project\photos\jump.gif" height="400" width="900"/>
+			 <img src="photos\jump.gif" height="400" width="900"/>
 	 			<h2>Let's Go!</h2>
  		</div>
 	</section>
-
-	<div class="picture">
-		<img src="photos\boardwalk2.jpg" height="200px" width="300px" />
-	</div>
 </body>
 
 <footer id="footer">
