--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
   		<title>Kilometers and Photographs</title>
   		<meta name="viewport" content="width=device-width,initial-scale=1" > 
-  		<link href="style.css" rel="stylesheet" type="text/css">
+  		<link href="style.css" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400;500;600;700&family=Kanit:ital,wght@0,200;0,700;1,400&family=Roboto:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&display=swap" rel="stylesheet">
@@ -74,7 +74,7 @@
    
   <div>
 	<section class="tripline">
-		<a href="C:\Users\ljamc\OneDrive\Desktop\Website Project\West Coast.html" target="_blank">
+		<a href="#" target="_blank">
 			<div class="westcoast">
 				<h3 id="tripname">West Coast</h3>
 			</div>
@@ -113,7 +113,6 @@
 		</a> 
 	</section>
   </div>
-
   	<section id="aboutme">
 
 		<div class="intro">
@@ -125,10 +124,11 @@
  		</div>
 
  		<div class="LetsGo">
-			 <img src="photos\jump.gif" height="400" width="900"/>
+			 <img src="photos\jump.gif" />
 	 			<h2>Let's Go!</h2>
  		</div>
 	</section>
+
 </body>
 
 <footer id="footer">
