--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 				
 				<div class="slideshow-wrapper">
 					<div class="slide">
-						<img class="slide-img" src="photos/Mt. Cook/glacier.jpg">
+						<img class="slide-img" src="Mt. Cook/glacier.jpg">
 
 					</div>
 					<div class="slide">
-						<img class="slide-img" src="photos\West Coast\lake mapourika.jpg">
+						<img class="slide-img" src="West Coast\lake mapourika.jpg">
 
 					</div>
 					<div class="slide">
-						<img class="slide-img" src="photos\Wanaka tekapo\Lavender.jpg">
+						<img class="slide-img" src="Wanaka tekapo\Lavender.jpg">
 
 					</div>
 					<div class="slide">
-						<img class="slide-img" src="photos\West Coast\jackson.jpg">
+						<img class="slide-img" src="West Coast\jackson.jpg">
 
 					</div>
 					
@@ -191,7 +191,7 @@
  		</div>
 
  		<div class="LetsGo">
-			 <img src="photos\Mt. Cook\jump.gif" />
+			 <img src="Mt. Cook\jump.gif" />
 	 			<h2>Let's Go!</h2>
  		</div>
 	</section>
