--- a/ToursPage.html
+++ b/ToursPage.html
@@ -12,7 +12,7 @@
 	
 <body>
 	<div class="navigation">
-		<a href="TravelNZ.html" id="logolink">
+		<a href="index.html" id="logolink">
 			<h2 class="travellogo">
 				TravelNZ
 			</h2>
@@ -24,8 +24,8 @@
 
 		<ul class="menu">
 
-			<li><a href="TravelNZ.html" title="Home">Home</a></li>
-			<li><a href="TravelNZ.html#aboutme" title="About Us">About Us</a></li>
+			<li><a href="index.html" title="Home">Home</a></li>
+			<li><a href="index.html#aboutme" title="About Us">About Us</a></li>
 			<li><a href="ContactUsPage.html" title="Contact Us">Contact Us</a></li>
 		</ul>
 	
