--- a/ContactUsPage.html
+++ b/ContactUsPage.html
@@ -14,7 +14,7 @@
     <!--navigation-->
     
 	<div class="navigation">
-            <a href="TravelNZ.html" id="logolink">
+            <a href="index.html" id="logolink">
 			    <h2 class="travellogo">
 				    TravelNZ
 			    </h2>
@@ -25,8 +25,8 @@
             </label>
     
 			<ul class="menu">
-			    <li><a href="TravelNZ.html" title="Home">Home</a></li>
-			    <li><a href="TravelNZ.html#aboutme" title="About Us">About Us</a></li>
+			    <li><a href="index.html" title="Home">Home</a></li>
+			    <li><a href="index.html#aboutme" title="About Us">About Us</a></li>
 			    <li><a href="ToursPage.html" title="Travel!">Trips</a></li>
 			</ul>
 		
