--- a/GenericTourPage.html
+++ b/GenericTourPage.html
@@ -12,7 +12,7 @@
 	
 <body>
 	<div class="navigation">
-		<a href="TravelNZ.html" id="logolink">
+		<a href="index.html" id="logolink">
 			<h2 class="travellogo">
 				TravelNZ
 			</h2>
@@ -24,7 +24,7 @@
 
 		<ul class="menu">
 
-			<li><a href="TravelNZ.html" title="Home">Home</a></li>
+			<li><a href="index.html" title="Home">Home</a></li>
 			<li><a href="ToursPage.html" title="Tours Page">Trips</a></li>
 			<li><a href="ContactUsPage.html" title="Contact Us">Contact Us</a></li>
 		</ul>
