--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			</div>
 	
 			<div class="LetsGo">
-				<img src="photos\Mt. Cook\jump.gif" />
+				<img src="Mt. Cook\jump.gif" />
 				<h2>Let's Go!</h2>
 			</div>
 		</section>
