--- a/ArticlePage.html
+++ b/ArticlePage.html
@@ -103,14 +103,14 @@
 						<br>
 					</p>
 					<h4>Tasman Glacier Track</h4>
-					<img class="glacier" src="photos\Mt. Cook\glacier.jpg">
+					<img class="glacier" src="Mt. Cook\glacier.jpg">
 					<p>
 						The Tasman Glacier track is an easy and flat, 2.5km out and back walk that approximately takes 1 hour. It is recommended for beginners and groups with children or elderly hikers. It is a beautiful and relaxing walk that lets you enjoy the majesty of the southern alps without challenging you too physically. At the end of the walk is a lookout to the Tasman Glacier, which is the longest glacier in New Zealand, which is about 23kms in length. 
 						You can enjoy a relaxing picnic and take a few snapshots of this stunning landscape after a short walk. <br><br>
 					</p>
 
 					<h4>Hooker Valley Track</h4>
-					<img class="glacier" src="photos\Mt. Cook\hooker valley.jpg">
+					<img class="glacier" src="Mt. Cook\hooker valley.jpg">
 					<p>
 						The Hooker Valley Track is the longer and more challenging, albeit still great for beginners, half day walk. It is a 10km return track with 5kms each way. It is estimated to take 3 hours to complete. The track brings you deeper into the park and has a slight increase in elevation throughout the walk. 
 						3 amazing swing bridges are also located along the track. However, on days with bad weather, the first swing bridge will be closed to prevent travellers from progressing further onto the track and ensure the safety of all. On clear and sunny days, the beauty of the southern alps will leave you in awe as you progress through the walk. The rivers running through the valley will also have this stunning blue shade from all the “glacier flour” that goes into the water and settles on the bottom. However, the water will be a murky grey when the glacier flour has been stirred up by rain. At the end of the Hooker Valley track is a picnic area beside a beautiful lake. 
