--- a/GenericTourPage.html
+++ b/GenericTourPage.html
@@ -107,7 +107,7 @@
 						<br>
 					</p>
 					<h4>Photo Title</h4>
-					<img class="glacier" src="photos\Wanaka tekapo\wanakatree.jpg">
+					<img class="glacier" src="Wanaka tekapo\wanakatree.jpg">
 					<p>
 						Nec dui nunc mattis enim ut tellus elementum sagittis. Pellentesque sit amet porttitor eget dolor morbi non. Nibh mauris cursus mattis molestie a. Neque gravida in fermentum et sollicitudin ac orci phasellus egestas. Nec nam aliquam sem et tortor consequat id porta. 
                         Lectus nulla at volutpat diam ut. Vulputate enim nulla aliquet porttitor lacus luctus accumsan. Risus viverra adipiscing at in tellus integer feugiat. Velit ut tortor pretium viverra suspendisse potenti. Platea dictumst vestibulum rhoncus est. 
@@ -115,7 +115,7 @@
 					</p>
 
 					<h4>Photo Title 2</h4>
-					<img class="glacier" src="photos\Cape Palliser\palliser drive.jpg">
+					<img class="glacier" src="Cape Palliser\palliser drive.jpg">
 					<p>
 						Nunc eget lorem dolor sed. Lorem dolor sed viverra ipsum nunc. Sit amet tellus cras adipiscing enim eu turpis. 
                         Nec ultrices dui sapien eget mi proin sed libero enim. Cursus eget nunc scelerisque viverra mauris in aliquam sem. Viverra adipiscing at in tellus integer feugiat scelerisque. Eu scelerisque felis imperdiet proin fermentum leo vel orci porta. Mauris pharetra et ultrices neque ornare. 
